my first website
my first website using html

--- a/test.html
+++ b/test.html
@@ -3,9 +3,13 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>My First Website</title>
+    <link href="style.css" rel="stylesheet">
+    
 </head>
 <body>
-    
+<div> navigation bar </div>
+<div>menu</div>
+<div>Main window</div>
 </body>
 </html>
