--- a/test.html
+++ b/test.html
@@ -5,11 +5,12 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>My First Website</title>
     <link href="style.css" rel="stylesheet">
-    
+
 </head>
 <body>
-<div> navigation bar </div>
-<div>menu</div>
-<div>Main window</div>
+    <div id="navbar">  Navigation Bar </div>
+    <div id="sidebar">  Menu  </div>
+    <div id="main">  Main window </div>
+    
 </body>
 </html>
